Partie TCP avec fichiers